--- a/Notebook.Web/wwwroot/notebook/cssJs/css/notebook.css
+++ b/Notebook.Web/wwwroot/notebook/cssJs/css/notebook.css
@@ -284,10 +284,16 @@ table.dataTable thead .sorting_desc {
     margin-bottom:0;
 }
 
+
+
 @media (min-width: 768px) {
     .n-modal-content {
         width: 500px;
         margin-top:60px;
+    }
+
+    .n-modal-lg {
+        width:1170px;
     }
 }
 /*----------------End Notebook Modal-----------------------*/
