--- a/Notebook.Web/Views/Account/Login.cshtml
+++ b/Notebook.Web/Views/Account/Login.cshtml
@@ -42,7 +42,7 @@
                             <div class="col-xs-6">
                                 <div class="checkbox icheck">
                                     <label style="padding-left:20px">
-                                        <input type="checkbox" name="Remember"> @Localizer["Remember Me"]
+                                        <input type="checkbox" name="remember"> @Localizer["Remember Me"]
                                     </label>
                                 </div>
                             </div>
