--- a/Notebook.Web/Views/User/Notes.cshtml
+++ b/Notebook.Web/Views/User/Notes.cshtml
@@ -8,7 +8,7 @@
         <div class="box">
             <div class="box-header with-border">
                 <h3 class="box-title">@Localizer["Note List"]</h3>
-                <a class="btn btn-xs btn-success pull-right" href="/add-note">
+                <a class="btn btn-xs btn-success pull-right" data-action="add-note" data-type="modal">
                     <i class="fa fa-file-text-o"></i>&nbsp;@Localizer["Add Note"]
                 </a>
             </div>
