--- a/Notebook.Web/Views/Account/Register.cshtml
+++ b/Notebook.Web/Views/Account/Register.cshtml
@@ -35,7 +35,7 @@
                             <span class="glyphicon glyphicon-user form-control-feedback"></span>
                         </div>
                         <div class="form-group has-feedback">
-                            <input type="email" class="form-control" placeholder="@Localizer["Email"]" name="Name" value="@Model.Email">
+                            <input type="email" class="form-control" placeholder="@Localizer["Email"]" name="Email" value="@Model.Email">
                             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
                         </div>
                         <div class="form-group has-feedback">
