--- a/Notebook.Web/Views/Account/Login.cshtml
+++ b/Notebook.Web/Views/Account/Login.cshtml
@@ -56,7 +56,7 @@
                         </div>
                     </form>
                     <div class="row" style="text-align:center">
-                        <a href="/Account/Register" class="text-center">--> @Localizer["Register a new membership"]</a>
+                        <a href="/register" class="text-center">--> @Localizer["Register a new membership"]</a>
                     </div>
                 </div>
             </div>
