--- a/Notebook.Web/Views/Account/Register.cshtml
+++ b/Notebook.Web/Views/Account/Register.cshtml
@@ -60,7 +60,7 @@
                         </div>
                     </form>
                     <div class="row" style="text-align:center">
-                        <a href="/Account/Login" class="text-center">--> @Localizer["Login"]</a>
+                        <a href="/login" class="text-center">--> @Localizer["Login"]</a>
                     </div>
                 </div>
             </div>
