--- a/Notebook.Web/Views/Shared/Components/Header/Default.cshtml
+++ b/Notebook.Web/Views/Shared/Components/Header/Default.cshtml
@@ -152,7 +152,7 @@
                                         <a href="#" class="btn btn-default btn-flat">Profile</a>
                                     </div>
                                     <div class="pull-right">
-                                        <a href="/Account/Logout" class="btn btn-default btn-flat">Sign out</a>
+                                        <a href="/logout" class="btn btn-default btn-flat">Sign out</a>
                                     </div>
                                 </li>
                             </ul>
@@ -168,7 +168,7 @@
                     </a>
 
                     <div class="pull-right" style="line-height:50px; ">
-                        <a href="/Account/Login" style="color:white; font-size:13px; font-weight:bold"><i class="fa fa-sign-in"></i>&nbsp;@Localizer["Login"]</a>
+                        <a href="/login" style="color:white; font-size:13px; font-weight:bold"><i class="fa fa-sign-in"></i>&nbsp;@Localizer["Login"]</a>
                     </div>
                 </div>
             }
