--- a/Notebook.Web/Views/Folder/Detail.cshtml
+++ b/Notebook.Web/Views/Folder/Detail.cshtml
@@ -23,9 +23,7 @@
             <!-- Profile Image -->
             <div class="box box-primary">
                 <div class="box-body box-profile" style="padding:10px 15px;">
-                    <p class="text-center">
-                        <i class="fa fa-folder-open-o" style="font-size:70px;"></i>
-                    </p>
+                    <p class="text-center media-icon">F</p>
 
                     <h3 class="text-center box-title">@Model.Name</h3>
 
@@ -46,7 +44,7 @@
                         </li>
                     </ul>
 
-                    @if (Model.OwnerID == _activeUser.ID)
+                    @if (Model.OwnerID == _activeUser?.ID)
                     {
                         <div class="text-center">
                             <a class="btn btn-primary" data-type="modal" data-action="@Model.ID/edit-folder"><b>@Localizer["Edit"]</b></a>
@@ -72,7 +70,7 @@
                 </ul>*@
                 <div class="tab-content">
                     @{ 
-                        await Html.RenderPartialAsync("Notes", Model.ID);
+                        await Html.RenderPartialAsync("Notes", new DataListPartialModel { ID = Model.ID, Member = (Model.ID == _activeUser?.ID) ? Member.Owner : Member.Member });
                     }
                 </div>
             </div>
