--- a/Notebook.Web/Views/Group/Detail.cshtml
+++ b/Notebook.Web/Views/Group/Detail.cshtml
@@ -22,9 +22,7 @@
         <div class="col-md-3">
             <div class="box box-primary">
                 <div class="box-body box-profile" style="padding:10px 15px;">
-                    <p class="text-center">
-                        <i class="fa fa-clone" style="font-size:70px;"></i>
-                    </p>
+                    <p class="text-center media-icon">G</p>
 
                     <h3 class="text-center box-title">@Model.Name</h3>
 
@@ -78,11 +76,11 @@
                 <div class="tab-content">
                     @if (Model.List == "notes")
                     {
-                        await Html.RenderPartialAsync("Notes", Model.ID);
+                        await Html.RenderPartialAsync("Notes", new DataListPartialModel { ID = Model.ID, Member = (Model.ID == _activeUser?.ID) ? Member.Owner : Member.Member });
                     }
                     else
                     {
-                        await Html.RenderPartialAsync("Folders", Model.ID);
+                        await Html.RenderPartialAsync("Folders", new DataListPartialModel { ID = Model.ID, Member = (Model.ID == _activeUser?.ID) ? Member.Owner : Member.Member });
                     }
                 </div>
             </div>
