--- a/Notebook.Web/Views/Note/Detail.cshtml
+++ b/Notebook.Web/Views/Note/Detail.cshtml
@@ -18,9 +18,7 @@
         <div class="col-md-3">
             <div class="box box-primary">
                 <div class="box-body box-profile">
-                    <p class="text-center">
-                        <i class="fa fa-file-text-o" style="font-size:70px;"></i>
-                    </p>
+                    <p class="text-center media-icon">N</p>
 
                     <h3 class="text-center box-title">@Model.Title</h3>
 
