--- a/Notebook.Web/Views/User/Folders.cshtml
+++ b/Notebook.Web/Views/User/Folders.cshtml
@@ -1,4 +1,4 @@
-﻿@model string
+﻿@model DataListPartialModel
 
 @inject IViewLocalizer Localizer
 
@@ -8,9 +8,13 @@
         <div class="box">
             <div class="box-header with-border">
                 <h3 class="box-title">@Localizer["Folder List"]</h3>
-                <button class="btn btn-xs btn-success pull-right" data-type="modal" data-action="add-folder">
-                    <i class="fa fa-folder-open-o"></i>&nbsp;@Localizer["Add Folder"]
-                </button>
+                @if (Model.Member == Member.Owner)
+                {
+                    <button class="btn btn-xs btn-success pull-right" data-type="modal" data-action="add-folder">
+                        <i class="fa fa-folder-open-o"></i>&nbsp;@Localizer["Add Folder"]
+                    </button>
+                }
+                
             </div>
             <div class="box-body table-responsive">
                 <table class="table table-striped folderlist">
@@ -34,7 +38,7 @@
             "serverSide": true,
             "ordering": false,
             "ajax": {
-                "url": "/folders?userId=@Model",
+                "url": "/folders?userId=@Model.ID",
                 "type": "POST"
             },
             "columns": [
