--- a/Notebook.Web/Views/Folder/Detail.cshtml
+++ b/Notebook.Web/Views/Folder/Detail.cshtml
@@ -70,7 +70,7 @@
                 </ul>*@
                 <div class="tab-content">
                     @{ 
-                        await Html.RenderPartialAsync("Notes", new DataListPartialModel { ID = Model.ID, Member = (Model.ID == _activeUser?.ID) ? Member.Owner : Member.Member });
+                        await Html.RenderPartialAsync("Notes", new DataListPartialModel { ID = Model.ID, Member = (Model.OwnerID == _activeUser?.ID) ? Member.Owner : Member.Member });
                     }
                 </div>
             </div>
