--- a/Notebook.Web/Views/User/Notes.cshtml
+++ b/Notebook.Web/Views/User/Notes.cshtml
@@ -21,7 +21,6 @@
                     <thead class="table-header">
                         <tr>
                             <th>@Localizer["Name"]</th>
-                            <th>@Localizer["State"]</th>
                         </tr>
                     </thead>
                 </table>
@@ -41,8 +40,7 @@
                 "type": "POST"
             },
             "columns": [
-                { "data": "name" },
-                { "data": "state" }
+                { "data": "name" }
             ],
             "language": {
                 "searchPlaceholder":"@Localizer["Search note name"]"
