--- a/Notebook.Web/Views/Group/Form.cshtml
+++ b/Notebook.Web/Views/Group/Form.cshtml
@@ -4,21 +4,21 @@
 
 <div id="modal" class="n-modal" role="dialog">
     <div class="n-modal-dialog">
-        <form action="@(Model != null ? "/editGroup" : "/addGroup")" method="post">
+        <form action="@(Model.ID != null ? "/editGroup" : "/addGroup")" method="post">
             @Html.AntiForgeryToken()
 
             <div class="n-modal-content">
                 <div class="n-modal-header">
                     <button type="button" class="close" onclick="closeModal()">&times;</button>
-                    <label class="n-modal-title">@(Model != null ? Localizer["Edit Group"] : Localizer["Add Group"])</label>
+                    <label class="n-modal-title">@(Model.ID != null ? Localizer["Edit Group"] : Localizer["Add Group"])</label>
                 </div>
                 <div class="n-modal-body">
                     <div class="form-group">
                         @Html.HiddenFor(a => a.ID)
-                        <input type="text" class="form-control" name="Name" required value="@(Model != null ? Model.Name : "")" placeholder="@Localizer["Name"]" />
+                        <input type="text" class="form-control" name="Name" required value="@Model.Name" placeholder="@Localizer["Name"]" />
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" name="Explanation" value="@(Model != null ? Model.Explanation : "")" placeholder="@Localizer["Explanation"]" />
+                        <input type="text" class="form-control" name="Explanation" value="@Model.Explanation" placeholder="@Localizer["Explanation"]" />
                     </div>
                     <div class="form-group">
                         <label>@Localizer["Visibility"]</label>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="n-modal-footer">
                     <button type="button" class="btn btn-default btn-sm" onclick="closeModal()">@Localizer["Close"]</button>
-                    <input type="submit" class="btn btn-success  btn-sm" value="@(Model != null ? Localizer["Update"] : Localizer["Add"])" />
+                    <input type="submit" class="btn btn-success  btn-sm" value="@(Model.ID != null ? Localizer["Update"] : Localizer["Add"])" />
                 </div>
             </div>
         </form>
