--- a/Notebook.Web/Views/Group/Detail.cshtml
+++ b/Notebook.Web/Views/Group/Detail.cshtml
@@ -72,8 +72,8 @@
             <div class="col-md-9">
                 <div class="nav-tabs-custom">
                     <ul class="nav nav-tabs">
-                        <li @((Model.List == "" || Model.List == "folders") ? "class=active" : "")><a href="/@Model.ID/group/folders"><i class="fa fa-folder-open-o"></i>&nbsp;@Localizer["Folders"]</a></li>
-                        <li @((Model.List == "notes") ? "class=active" : "")><a href="/@Model.ID/group/notes"><i class="fa fa-file-text-o"></i>&nbsp;@Localizer["All Notes"]</a></li>
+                        <li @((Model.List == "") ? "class=active" : "")><a href="/group/@Model.ID/@Model.Name.ClearHtmlTagAndCharacter()"><i class="fa fa-folder-open-o"></i>&nbsp;@Localizer["Folders"]</a></li>
+                        <li @((Model.List == "notes") ? "class=active" : "")><a href="/group/@Model.ID/@Model.Name.ClearHtmlTagAndCharacter()/notes"><i class="fa fa-file-text-o"></i>&nbsp;@Localizer["All Notes"]</a></li>
                     </ul>
                     <div class="tab-content">
                         @if (Model.List == "notes")
